@@ -115,7 +115,7 @@ public class SlowTests{
 						chunks.set(bi, a);
 					}
 					
-					head = chunks.get(0);
+					head = chunks.getFirst();
 					var last = head;
 					for(int i = 1; i<chunks.size(); i++){
 						var next = chunks.get(i);
@@ -390,22 +390,22 @@ public class SlowTests{
 		var rnr = new FuzzingStateEnv.Marked<State, Action, IOException>(){
 			@Override
 			public State create(RandomGenerator random, long sequenceIndex, RunMark mark) throws IOException{
-				var cluster = optionallyLogged(mark.sequence(sequenceIndex), "map-fuzz" + sequenceIndex);
+				var cluster = optionallyLogged(mark.sequence(sequenceIndex), "set-fuzz" + sequenceIndex);
 				return new State(cluster, new CheckSet<>(cluster.roots().request("hi", type, Integer.class)));
 			}
 			@Override
 			public void applyAction(State state, long actionIndex, Action action, RunMark mark) throws IOException{
 				if(mark.action(actionIndex)){
-//					LogUtil.println(action);
 					int a = 0;
 				}
+				
 				switch(action.type){
 					case ADD -> state.set.add(action.num);
 					case REMOVE -> state.set.remove(action.num);
 					case CONTAINS -> state.set.contains(action.num);
 					case CLEAR -> state.set.clear();
 				}
-				if(List.of(Type.REMOVE, Type.CLEAR).contains(action.type)){
+				if(List.of(Type.REMOVE, Type.CLEAR, Type.ADD).contains(action.type)){
 					state.cluster.scanGarbage(ERROR);
 				}
 			}
@@ -460,7 +460,7 @@ public class SlowTests{
 	}
 	
 	@Test(dependsOnGroups = "rootProvider", ignoreMissingDependencies = true)
-	void fuzzIOSet(){
+	void fuzzIOHashSet(){
 		runSetFuzz(100000, IOHashSet.class);
 	}
 	
@@ -529,7 +529,7 @@ public class SlowTests{
 	Object[][] listMakers(){
 		return new Object[][]{
 			{new ListMaker("memory wrap", 1, () -> IOList.wrap(new ArrayList<>()))},
-			{new ListMaker("cached wrapper", 1, () -> IOList.wrap(new ArrayList<Integer>()).cachedView(40))},
+			{new ListMaker("cached wrapper", 1, () -> IOList.wrap(new ArrayList<Integer>()).cachedView(40, 20))},
 			{new ListMaker("contiguous list", 0.5, () -> Cluster.emptyMem().roots().request("list", ContiguousIOList.class, Integer.class))},
 			{new ListMaker("linked list", 0.1, () -> Cluster.emptyMem().roots().request("list", LinkedIOList.class, Integer.class))},
 			};
@@ -731,7 +731,7 @@ public class SlowTests{
 		if(fails.isEmpty()) return;
 		LogUtil.printlnEr(FuzzFail.report(fails));
 		
-		var stability = runner.establishFailStability(fails.get(0), 15);
+		var stability = runner.establishFailStability(fails.getFirst(), 15);
 		runner.runStable(stability);
 		fail("There were fails!");
 	}
